# flutter_demo

./: .gitignore  README.md  pubspec.yaml
backend/: README.md  go.mod  go.sum  main.go
backend/pb_data/: data.db  data.db-shm  data.db-wal  logs.db  logs.db-shm  logs.db-wal
db_stealer/: Cargo.toml  t.json
db_stealer/src/: main.rs  sponacular.rs  util.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: add_recipe.dart  addition_recipe.dart  avatar.dart  like_screen.dart  main.dart  profile_update.dart  recipe_detail.dart  recipe_update.dart  red_popup.dart  theme_provider.dart
lib/auth/: Signup.dart  backend_proxy.dart  login.dart  signup.dart  varification.dart
lib/barDesign/: BottomNavBar.dart  nav_bar_item.dart
lib/bottom_bar/: bar.dart  item.dart
lib/constants/: constants.dart  recipe_base_state.dart
lib/listModels/: cocktail_card.dart  cuisine_card.dart  ingredient_card.dart  my_card.dart  recipe.api.dart  recipe.dart  recipe_card.dart  reusable_widgets.dart  spoonacular_recipe.api.dart  spoonacular_recipe.dart
lib/onboding/: OnBodingScreen.dart  bording_screen.dart
lib/onboding/components/: animated_btn.dart  sign_in_dialog.dart  (+1 more)
lib/recipe/: cuisine_types.dart  models.dart  provider.dart
lib/screens/: home.dart  likes.dart  profile.dart
lib/themes/: theme.dart  theme_provider.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rusty-backend/: .env  Cargo.toml  docker-compose.yml
rusty-backend/migration/src/: lib.rs  m20240505_022835_create_users.rs
rusty-backend/src/: main.rs  user.rs  util.rs
rusty-backend/src/entity/: users.rs
(+7 files in other folders)
