[package]
name = "rusty-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
diesel = { version = "2.1.6", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
