[package]
name = "rusty-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
